implemented PDU exchanges and socket, but cannot work yet because all methods are taking &mut self

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "etherrage"
+name = "etherage"
 categories = ["science::robotics", "no-std", "network-programming"]
 version = "0.1.0"
 edition = "2021"
