--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ keywords = ["no-std", "beckhoff", "ethercat", "igh", "soem", "omron"]
 resolver = "2"
 
 [dependencies]
-async-io = { version = "1.13.0", optional = true }
-futures-lite = { version = "1.12.0", default-features = false }
+# async-io = { version = "1.13.0", optional = true }
+# futures-lite = { version = "1.12.0", default-features = false }
+futures = { version = "^0.3.8" }
 atomic_enum = "0.2.0"
-defmt = "0.3.2"
+# defmt = "0.3.2"
 heapless = "0.7.16"
 log = "0.4.17"
 num_enum = { version = "^0.6.0", default-features = false }
