--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ num_enum = { version = "^0.6.0", default-features = false }
 packed_struct = { version = "0.10.0", default-features = false }
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
 bilge = {version="^0.1.4", git="https://github.com/hecatia-elegua/bilge"}
+chrono = { version="^0.4.26" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.134"
