--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,14 @@ keywords = ["no-std", "beckhoff", "ethercat", "igh", "soem", "omron"]
 resolver = "2"
 
 [dependencies]
-# async-io = { version = "1.13.0", optional = true }
-# futures-lite = { version = "1.12.0", default-features = false }
 futures = { version = "^0.3.8" }
 atomic_enum = "0.2.0"
 heapless = "0.7.16"
 log = "0.4.17"
-# num_enum = { version = "^0.6.0", default-features = false }
 packed_struct = { version = "0.10.0", default-features = false }
 tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
 bilge = {version="^0.1.4", git="https://github.com/hecatia-elegua/bilge"}
-# futures-concurrency = "7.2.1"
+futures-concurrency = "7.2.1"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2.134"
