fixed readme name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jimy Byerley <jimy.byerley@gmail.com>", "CendreQuasar540"]
 version = "0.1.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-readme = "README.md"
+readme = "readme.md"
 description = "An EtherCAT master in pure-Rust very close to the ethercat nature"
 keywords = ["ethercat", "ethernet", "realtime", "robotics", "servodrive"]
 url = "https://github.com/jimy-byerley/etherage"
