--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ log = "^0.4.17"
 futures-concurrency = "^7.2.1"
 packed_struct = { version = "^0.10.0", default-features = false }
 tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
-bilge = { version="^0.1.4", git="https://github.com/hecatia-elegua/bilge"}
+bilge = "^0.2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "^0.2.134"
