--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", 
 ioprio ="^0.2.0"
 bilge = "^0.2"
 
+tokio-timerfd = "^0.2"
+futures = "^0.3"
+
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "^0.2.134"
 thread-priority = "0.13.1"
