--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ packed_struct = { version = "^0.10.0", default-features = false }
 tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
 ioprio ="^0.2.0"
 bilge = "^0.2"
+chrono = "^0.4.31"
+thiserror = "^1.0.50"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "^0.2.134"
