--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,10 @@ packed_struct = { version = "^0.10.0", default-features = false }
 tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
 ioprio ="^0.2.0"
 bilge = "^0.2"
-
 tokio-timerfd = "^0.2"
 futures = "^0.3"
+# magetex = { git = "https://github.com/Geehaich/useless_stuff_rust/tree/main/pseudo_mutex"}
+magetex = { path = "../pseudo_mutex"}
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "^0.2.134"
