--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ heapless = "^0.7.16"
 log = "^0.4.17"
 futures-concurrency = "^7.2.1"
 packed_struct = { version = "^0.10.0", default-features = false }
-tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
+tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time", "tracing"] }
 ioprio ="^0.2.0"
 bilge = "^0.2"
 tokio-timerfd = "^0.2"
@@ -31,3 +31,4 @@ thread-priority = "0.13.1"
 [dev-dependencies]
 env_logger = "^0.10.0"
 ctrlc = "^3.2.3"
+console-subscriber="^0.2.0"
