--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,9 @@ resolver = "2"
 [dependencies]
 heapless = "^0.7.16"
 log = "^0.4.17"
-futures-concurrency = "^7.2.1"
+futures-concurrency = "^7.4"
 packed_struct = { version = "^0.10.0", default-features = false }
-tokio = { version = "^1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
+tokio = { version = "^1.36", features = ["sync", "rt"] }
 ioprio ="^0.2.0"
 bilge = "^0.2"
 
@@ -28,5 +28,5 @@ libc = "^0.2.134"
 thread-priority = "0.13.1"
 
 [dev-dependencies]
+tokio = { features = ["macros", "time", "rt-multi-thread"] }
 env_logger = "^0.10.0"
-ctrlc = "^3.2.3"
